--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ crate-type = ["cdylib", "rlib"]
 default = ["wee_alloc"]
 
 [dependencies]
-chrono = "0.4.22"
+chrono = { version = "0.4.22", features = ["serde"] }
 ics = "0.5.8"
 regex = "1.6.0"
 reqwest = { version = "0.11.12", features = ["blocking"] }
