--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,22 +7,34 @@ edition = "2021"
 lto = true
 opt-level = 'z'
 
-[lib]
-crate-type = ["cdylib", "rlib"]
-
-[features]
-default = ["wee_alloc"]
-
 [dependencies]
 chrono = { version = "0.4.22", features = ["serde"] }
 ics = "0.5.8"
 regex = "1.6.0"
 reqwest = { version = "0.11.12", features = ["blocking"] }
 scraper = "0.13.0"
-wasm-bindgen = "0.2.83"
 xxhash-rust = { version = "0.8.6", features = ["xxh3"] }
-wee_alloc = { version = "0.4.5", optional = true }
-rocket = "0.5.0-rc.2"
 tokio = "1.24.2"
-rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
 serde = { version = "1.0.152", features = ["derive"] }
+serde_json = "1.0"
+vercel_runtime = { version = "1.0.2" }
+queryst = "1"
+
+[lib]
+path = "src-rs/lib.rs"
+
+[[bin]]
+name = "calendars"
+path = "api/calendars.rs"
+
+[[bin]]
+name = "entries"
+path = "api/entries.rs"
+
+[[bin]]
+name = "generate"
+path = "api/generate.rs"
+
+[[bin]]
+name = "test"
+path = "src-rs/test.rs"
