--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0"
 vercel_runtime = { version = "1.0.2" }
 queryst = "1"
+chumsky = "0.9.3"
 
 [lib]
 path = "src-rs/lib.rs"
