--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ serde_json = "1.0"
 vercel_runtime = { version = "1.0.2" }
 queryst = "1"
 chumsky = "0.9.3"
+urlencoding = "2.1.3"
 
 [lib]
 path = "src-rs/lib.rs"
